--- a/src/GUI/ModManager/Views/Mods/ModListView.axaml
+++ b/src/GUI/ModManager/Views/Mods/ModListView.axaml
@@ -4,8 +4,10 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+	xmlns:m="using:ModManager.Models.Mod"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:rxui="http://reactiveui.net"
+	xmlns:ui="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
 	xmlns:vm="using:ModManager.ViewModels.Mods"
 	d:DesignHeight="200"
 	d:DesignWidth="400"
@@ -15,6 +17,29 @@
 	<UserControl.Styles>
 		<Style Selector="TextBox /template/ TextBlock#PART_Watermark">
 			<Setter Property="Opacity" Value="0.3" />
+		</Style>
+		<Style x:DataType="m:IModEntry" Selector="TreeDataGridRow">
+			<Setter Property="IsSelected" Value="{Binding IsSelected, Mode=OneWayToSource}" />
+			<!--<Setter Property="RowIndex" Value="{Binding Index}" />-->
+			<!--<Setter Property="IsExpanded" Value="{Binding IsExpanded}" />-->
+			<!--<Setter Property="ContextFlyout">
+				<Setter.Value>
+					<ui:FAMenuFlyout>
+						<ui:MenuFlyoutItem
+							Command="{ReflectionBinding $parent[UserControl].DataContext.OpenInFileExplorerCommand}"
+							CommandParameter="{Binding FilePath}"
+							IconSource="OpenFile"
+							Text="Open in File Explorer..." />
+
+						<ui:MenuFlyoutItem
+							Command="{ReflectionBinding $parent[UserControl].DataContext.OpenInDirectoryOpusCommand}"
+							CommandParameter="{Binding FilePath}"
+							IconSource="{StaticResource DopusIcon}"
+							IsVisible="{ReflectionBinding $parent[UserControl].DataContext.DirectoryOpusIsRunning}"
+							Text="Open in Directory Opus..." />
+					</ui:FAMenuFlyout>
+				</Setter.Value>
+			</Setter>-->
 		</Style>
 	</UserControl.Styles>
 	<Grid RowDefinitions="auto,*">
@@ -43,6 +68,7 @@
 		<TreeDataGrid
 			x:Name="ModsTreeDataGrid"
 			Grid.Row="1"
+			AutoDragDropRows="True"
 			Focusable="True"
 			Source="{Binding Mods}" />
 	</Grid>
