--- a/src/GUI/ModManager/Styling/ColorThemes/Dracula.axaml
+++ b/src/GUI/ModManager/Styling/ColorThemes/Dracula.axaml
@@ -1,111 +1,30 @@
-<ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Design.PreviewWith>
-		<Border Padding="20">
-			<!--  Add Controls for Previewer Here  -->
-		</Border>
-	</Design.PreviewWith>
-	<ResourceDictionary.ThemeDictionaries>
-		<ResourceDictionary x:Key="Dark">
-			<Color x:Key="TextFillColorPrimary">#FFFFFF</Color>
-			<Color x:Key="TextFillColorSecondary">#C5FFFF</Color>
-			<Color x:Key="TextFillColorTertiary">#87FFFF</Color>
-			<Color x:Key="TextFillColorDisabled">#5DFFFF</Color>
-			<Color x:Key="TextFillColorInverse">#E40000</Color>
+<ResourceDictionary xmlns="https://github.com/avaloniaui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Design.PreviewWith>
+        <Border Padding="20">
+            <!-- Add Controls for Previewer Here -->
+        </Border>
+    </Design.PreviewWith>
+    <ResourceDictionary.ThemeDictionaries>
+        <ResourceDictionary x:Key="Dark">
+            <Color x:Key="SukiBackground">#282A36</Color>
+            <Color x:Key="SukiStrongBackground">#282A36</Color>
+            <Color x:Key="SukiLightBackground">#282A36</Color>
+            <Color x:Key="SukiCardBackground">#282A36</Color>
+            <Color x:Key="SukiGlassCardBackground">#282A36</Color>
+            <Color x:Key="SukiGlassCardOpaqueBackground">#222222</Color>
+            <Color x:Key="SukiControlTouchBackground">#44475A</Color>
+            <Color x:Key="SukiDialogBackground">#000000</Color>
+			
+            <Color x:Key="SukiBorderBrush">#282A36</Color>
+            <Color x:Key="SukiControlBorderBrush">#606060</Color>
+            <Color x:Key="SukiMediumBorderBrush">#555555</Color>
+            <Color x:Key="SukiLightBorderBrush">#454545</Color>
+            <Color x:Key="GlassBorderBrush">#252729</Color>
 
-			<Color x:Key="AccentTextFillColorDisabled">#5DFFFF</Color>
-			<Color x:Key="TextOnAccentFillColorSelectedText">#FFFFFF</Color>
-			<Color x:Key="TextOnAccentFillColorPrimary">#2A2B34</Color>
-			<Color x:Key="TextOnAccentFillColorSecondary">#2A2B34</Color>
-			<Color x:Key="TextOnAccentFillColorDisabled">#87FFFF</Color>
-
-			<Color x:Key="ControlFillColorDefault">#0FFFFF</Color>
-			<Color x:Key="ControlFillColorSecondary">#15FFFF</Color>
-			<Color x:Key="ControlFillColorTertiary">#08FFFF</Color>
-			<Color x:Key="ControlFillColorDisabled">#0BFFFF</Color>
-			<Color x:Key="ControlFillColorTransparent">#00FFFF</Color>
-			<Color x:Key="ControlFillColorInputActive">#B31E1E1E</Color>
-
-			<Color x:Key="ControlStrongFillColorDefault">#8BFFFF</Color>
-			<Color x:Key="ControlStrongFillColorDisabled">#3FFFFF</Color>
-
-			<Color x:Key="ControlSolidFillColorDefault">#454545</Color>
-
-			<Color x:Key="SubtleFillColorTransparent">#00FFFF</Color>
-			<Color x:Key="SubtleFillColorSecondary">#0FFFFF</Color>
-			<Color x:Key="SubtleFillColorTertiary">#0AFFFF</Color>
-			<Color x:Key="SubtleFillColorDisabled">#00FFFF</Color>
-
-			<Color x:Key="ControlAltFillColorTransparent">#00FFFF</Color>
-			<Color x:Key="ControlAltFillColorSecondary">#2A2B3400</Color>
-			<Color x:Key="ControlAltFillColorTertiary">#0BFFFF</Color>
-			<Color x:Key="ControlAltFillColorQuarternary">#12FFFF</Color>
-			<Color x:Key="ControlAltFillColorDisabled">#00FFFF</Color>
-
-			<Color x:Key="ControlOnImageFillColorDefault">#B31C1C1C</Color>
-			<Color x:Key="ControlOnImageFillColorSecondary">#1A1A1A</Color>
-			<Color x:Key="ControlOnImageFillColorTertiary">#131313</Color>
-			<Color x:Key="ControlOnImageFillColorDisabled">#1E1E1E</Color>
-
-			<Color x:Key="AccentFillColorDisabled">#28FFFF</Color>
-
-			<Color x:Key="ControlStrokeColorDefault">#12FFFF</Color>
-			<Color x:Key="ControlStrokeColorSecondary">#18FFFF</Color>
-			<Color x:Key="ControlStrokeColorOnAccentDefault">#14FFFF</Color>
-			<Color x:Key="ControlStrokeColorOnAccentSecondary">#23000000</Color>
-			<Color x:Key="ControlStrokeColorOnAccentTertiary">#37000000</Color>
-			<Color x:Key="ControlStrokeColorOnAccentDisabled">#33000000</Color>
-
-			<Color x:Key="ControlStrokeColorForStrongFillWhenOnImage">#6B000000</Color>
-
-			<Color x:Key="CardStrokeColorDefault">#19000000</Color>
-			<Color x:Key="CardStrokeColorDefaultSolid">#1C1C1C</Color>
-
-			<Color x:Key="ControlStrongStrokeColorDefault">#8BFFFF</Color>
-			<Color x:Key="ControlStrongStrokeColorDisabled">#28FFFF</Color>
-
-			<Color x:Key="SurfaceStrokeColorDefault">#66757575</Color>
-			<Color x:Key="SurfaceStrokeColorFlyout">#33000000</Color>
-			<Color x:Key="SurfaceStrokeColorInverse">#0F000000</Color>
-
-			<Color x:Key="DividerStrokeColorDefault">#15FFFF</Color>
-
-			<Color x:Key="FocusStrokeColorOuter">#FFFFFF</Color>
-			<Color x:Key="FocusStrokeColorInner">#B3000000</Color>
-
-			<Color x:Key="CardBackgroundFillColorDefault">#0DFFFF</Color>
-			<Color x:Key="CardBackgroundFillColorSecondary">#08FFFF</Color>
-
-			<Color x:Key="SmokeFillColorDefault">#4D000000</Color>
-
-			<Color x:Key="LayerFillColorDefault">#4C3A3A3A</Color>
-			<Color x:Key="LayerFillColorAlt">#0DFFFF</Color>
-			<Color x:Key="LayerOnAcrylicFillColorDefault">#09FFFF</Color>
-			<Color x:Key="LayerOnAccentAcrylicFillColorDefault">#09FFFF</Color>
-
-			<!--  Color names changed as in WinUI 6763  -->
-			<Color x:Key="LayerOnMicaBaseAltFillColorDefault">#FF0000</Color>
-			<Color x:Key="LayerOnMicaBaseAltFillColorSecondary">#0FFFFF</Color>
-			<Color x:Key="LayerOnMicaBaseAltFillColorTertiary">#FF0000</Color>
-			<Color x:Key="LayerOnMicaBaseAltFillColorTransparent">#00FFFF</Color>
-
-			<Color x:Key="SolidBackgroundFillColorBase">#2A2B34</Color>
-			<Color x:Key="SolidBackgroundFillColorSecondary">#272730</Color>
-			<Color x:Key="SolidBackgroundFillColorTertiary">#3D3D4C</Color>
-			<Color x:Key="SolidBackgroundFillColorQuarternary">#4A4A5E</Color>
-			<Color x:Key="SolidBackgroundFillColorTransparent">#2A2B3420</Color>
-
-			<Color x:Key="SystemFillColorSuccess">#6CCB5F</Color>
-			<Color x:Key="SystemFillColorCaution">#FCE100</Color>
-			<Color x:Key="SystemFillColorCritical">#FF99A4</Color>
-			<Color x:Key="SystemFillColorNeutral">#8BFFFF</Color>
-			<Color x:Key="SystemFillColorSolidNeutral">#9D9D9D</Color>
-			<Color x:Key="SystemFillColorAttentionBackground">#08FFFF</Color>
-			<Color x:Key="SystemFillColorSuccessBackground">#393D1B</Color>
-			<Color x:Key="SystemFillColorCautionBackground">#433519</Color>
-			<Color x:Key="SystemFillColorCriticalBackground">#442726</Color>
-			<Color x:Key="SystemFillColorNeutralBackground">#08FFFF</Color>
-			<Color x:Key="SystemFillColorSolidAttentionBackground">#282A36</Color>
-			<Color x:Key="SystemFillColorSolidNeutralBackground">#272730</Color>
-		</ResourceDictionary>
-	</ResourceDictionary.ThemeDictionaries>
+            <Color x:Key="SukiText">#F8F8F2</Color>
+            <Color x:Key="SukiLowText">#C8F8F2</Color>
+            <Color x:Key="SukiDisabledText">#ca727272</Color>
+        </ResourceDictionary>
+    </ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
