--- a/src/GUI/ModManager/Views/Main/ModOrderView.axaml
+++ b/src/GUI/ModManager/Views/Main/ModOrderView.axaml
@@ -1,58 +1,57 @@
-<UserControl
-	x:Class="ModManager.Views.Main.ModOrderView"
-	xmlns="https://github.com/avaloniaui"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:mv="using:ModManager.Views.Mods"
-	xmlns:rxui="http://reactiveui.net"
-	xmlns:views="using:ModManager.Views"
-	xmlns:vm="using:ModManager.ViewModels.Main"
-	d:DesignHeight="1080"
-	d:DesignWidth="1920"
-	x:DataType="vm:ModOrderViewModel"
-	Focusable="True"
-	mc:Ignorable="d">
+<UserControl x:Class="ModManager.Views.Main.ModOrderView"
+             xmlns="https://github.com/avaloniaui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:SukiUI.Controls;assembly=SukiUI"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:mv="using:ModManager.Views.Mods"
+             xmlns:rxui="http://reactiveui.net"
+             xmlns:views="using:ModManager.Views"
+             xmlns:vm="using:ModManager.ViewModels.Main"
+             d:DesignHeight="1080"
+             d:DesignWidth="1920"
+             x:DataType="vm:ModOrderViewModel"
+             Background="Transparent"
+             Focusable="True"
+             mc:Ignorable="d">
 	<UserControl.Styles>
 		<Style Selector="mv|ModListView">
 			<Setter Property="Margin" Value="8,0,8,0" />
 		</Style>
 		<Style Selector="GridSplitter:pointerover">
-			<Setter Property="Background" Value="{DynamicResource SolidBackgroundFillColorQuarternary}" />
+			<Setter Property="Background" Value="{DynamicResource ThemeBorderMidColor}" />
 		</Style>
 		<Style Selector="GridSplitter">
-			<Setter Property="Background" Value="{DynamicResource SystemFillColorSolidNeutralBackground}" />
+			<Setter Property="Background" Value="Transparent" />
 			<Setter Property="Transitions">
 				<Transitions>
-					<BrushTransition
-						Easing="QuadraticEaseInOut"
-						Property="Background"
-						Duration="0:0:0.25" />
+					<BrushTransition Easing="QuadraticEaseInOut" Property="Background" Duration="0:0:0.25" />
 				</Transitions>
 			</Setter>
 		</Style>
 	</UserControl.Styles>
 	<Grid RowDefinitions="auto,*,20">
 		<rxui:ViewModelViewHost x:Name="CommandBarViewHost" ViewModel="{Binding CommandBar}" />
-		<Grid Grid.Row="1" ColumnDefinitions="*,auto,*">
-			<Grid x:Name="ActiveModsGrid" RowDefinitions="3*,auto,1*">
-				<mv:ModListView
-					x:Name="ActiveModsList"
-					Grid.Row="0"
-					VerticalAlignment="Stretch"
-					DataContext="{Binding ActiveModsView}" />
-				<GridSplitter Grid.Row="1" ResizeDirection="Rows" />
-				<mv:ModListView
-					x:Name="OverrideModsList"
-					Grid.Row="2"
-					VerticalAlignment="Stretch"
-					DataContext="{Binding OverrideModsView}" />
-			</Grid>
-			<GridSplitter Grid.Column="1" ResizeDirection="Columns" />
-			<mv:ModListView
-				x:Name="InactiveModsList"
-				Grid.Column="2"
-				DataContext="{Binding InactiveModsView}" />
+		<Grid Grid.Row="1" Margin="4,0" ColumnDefinitions="*,auto,*">
+			<controls:GlassCard IsOpaque="True">
+				<Grid x:Name="ActiveModsGrid" RowDefinitions="3*,auto,1*">
+					<mv:ModListView x:Name="ActiveModsList"
+					                Grid.Row="0"
+					                VerticalAlignment="Stretch"
+					                DataContext="{Binding ActiveModsView}" />
+
+					<GridSplitter Grid.Row="1" MinHeight="4" ResizeDirection="Rows" />
+
+					<mv:ModListView x:Name="OverrideModsList"
+					                Grid.Row="2"
+					                VerticalAlignment="Stretch"
+					                DataContext="{Binding OverrideModsView}" />
+				</Grid>
+			</controls:GlassCard>
+			<GridSplitter Grid.Column="1" MinWidth="4" ResizeDirection="Columns" />
+			<controls:GlassCard Grid.Column="2" IsOpaque="True">
+				<mv:ModListView x:Name="InactiveModsList" DataContext="{Binding InactiveModsView}" />
+			</controls:GlassCard>
 		</Grid>
 	</Grid>
 </UserControl>
