Add grid cell highlighting for mouse hovering

--- a/src/GUI/ModManager/App.axaml
+++ b/src/GUI/ModManager/App.axaml
@@ -30,14 +30,14 @@
 					<SolidColorBrush x:Key="TreeDataGridSelectedCellBackgroundBrush" Opacity="0.4" Color="Black" />
 				</ResourceDictionary>
 				<ResourceDictionary x:Key="Dark">
-					<SolidColorBrush x:Key="TreeDataGridGridLinesBrush" Opacity="0.1" Color="White" />
-					<SolidColorBrush x:Key="TreeDataGridHeaderBackgroundPointerOverBrush" Opacity="0.1" Color="White" />
-					<SolidColorBrush x:Key="TreeDataGridHeaderBackgroundPressedBrush" Opacity="0.6" Color="White" />
+					<SolidColorBrush x:Key="TreeDataGridGridLinesBrush" Opacity="0.1" Color="#5B74CD" />
+					<SolidColorBrush x:Key="TreeDataGridHeaderBackgroundPointerOverBrush" Color="#38394A" />
+					<SolidColorBrush x:Key="TreeDataGridHeaderBackgroundPressedBrush" Color="#38394A" />
 					<SolidColorBrush x:Key="TreeDataGridHeaderBorderBrushPointerOverBrush" Color="Transparent" />
 					<SolidColorBrush x:Key="TreeDataGridHeaderBorderBrushPressedBrush" Color="Transparent" />
-					<SolidColorBrush x:Key="TreeDataGridHeaderForegroundPointerOverBrush" Color="White" />
-					<SolidColorBrush x:Key="TreeDataGridHeaderForegroundPressedBrush" Color="White" />
-					<SolidColorBrush x:Key="TreeDataGridSelectedCellBackgroundBrush" Opacity="0.4" Color="White" />
+					<SolidColorBrush x:Key="TreeDataGridHeaderForegroundPointerOverBrush" Color="Lime" />
+					<SolidColorBrush x:Key="TreeDataGridHeaderForegroundPressedBrush" Color="Lime" />
+					<SolidColorBrush x:Key="TreeDataGridSelectedCellBackgroundBrush" Color="#425595" />
 				</ResourceDictionary>
 			</ResourceDictionary.ThemeDictionaries>
 
